profiling-using-exp-runner/recursive-reverse-remote/experiments/reverse_experiment/run_3_repetition_0/energibridge.log
sampling interval: 200, target function: reverse_string, input size: abcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcde
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.reverse as module; X = abcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcde; module.reverse_string(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.721314071655274 for 0.2315396 sec of execution.
